fix(Stream): float intro screen to avoid jumpiness

--- a/app/styles/stream.styl
+++ b/app/styles/stream.styl
@@ -9,8 +9,10 @@
   overflow-y: auto
 
   .intro
-    margin: 60px auto
+    margin-top: 60px;
+    width: 100%
     text-align: center
+    float: left
 
   .frame
     overflow: hidden
